# gitlab-mcp-server

./: .env.example  .gitignore  Agents.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: api-mapping.md  architecture.md  tools.md
src/gitlab_mcp/: __init__.py  config.py  main.py  server.py
src/gitlab_mcp/gitlab/: __init__.py  client.py  models.py
src/gitlab_mcp/tools/: __init__.py  merge_request.py  project.py  repository.py
src/gitlab_mcp/utils/: logger.py
tests/: test_config.py  test_main.py  test_server.py  test_stdio.py
tests/gitlab/: __init__.py  test_client.py
tests/tools/: __init__.py  test_merge_request.py  test_project.py  test_repository.py
