[project]
name = "gitlab-mcp-server"
version = "0.1.0"
description = "通过 MCP 协议提供只读 GitLab REST API 能力"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pywin32>=312",
    "ruff>=0.15.21",
]

[project.scripts]
gitlab-mcp = "gitlab_mcp.main:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
